--- a/css/main0be4.css
+++ b/css/main0be4.css
@@ -154,8 +154,19 @@ body{ background: #000000;font-family: 'Gilroy'; font-weight: normal; color: #ff
 @media screen and (max-width:450px){
     .md_header_inn .md_hdr_ctr img{ display: block;
     position: relative;
-    margin-top: 181px;
+    margin-top: 45px;
 }
+}
+
+@media screen and (max-width:450px){
+    .md_header_inn .md_hdr_ctr .btmlogo {
+        position: absolute;
+        left: 50%;
+        top: 70%;
+        bottom: 0;
+        transform: translate(-50%,0);
+        width: 150px;
+    }
 }
 
 .md_header_inn .md_hdr_rgt {
@@ -888,13 +899,13 @@ display: block;}
 }
 
 .md_sites .md_sites_logo a {
-    transition: all 0.4s ease 0s;
+    /* transition: all 0.4s ease 0s;
     transform: translate(0px,50px);
-    opacity: 0;
+    opacity: 0; */
 }
 .md_sites .md_sites_logo a.active {
-    transform: translate(0px,0);
-    opacity: 1;
+    /* transform: translate(0px,0);
+    opacity: 1; */
 }
 .md_wheels .md_wheels_inn .md_wheels_con {
     transform: translate(100px,0);
@@ -1046,3 +1057,7 @@ display: block;}
     transition: all 0.5s;
     cursor: pointer;
 }
+
+
+
+
