change in first page offer box

--- a/css/main0be4.css
+++ b/css/main0be4.css
@@ -1050,7 +1050,7 @@ display: block;}
 }
 
 #bekaar{
-    box-shadow: 2px 2px 2px 0px #0ff;
+    box-shadow: 2px 2px 2px 0px #b78700;
 }
 #bekaar:hover{
     box-shadow: 0px 0px 0px 0px rgb(0, 0, 0);
