--- a/css/my.css
+++ b/css/my.css
@@ -1,387 +1,4 @@
 
-/*nav*/
-.abc:hover {
-    color: #FFC827 !important;
-  }
-  
-  .abc {
-    font-size: 20px;
-    font-weight: 600;
-    color: rgb(255, 255, 255) !important;
-  }
-
-  .body {
-    margin: 0%;
-    padding: 0%;
-    font-family: "Ubuntu", sans-serif;
-    font-size: 16px;
-    margin: 0;
-    color: #3f3c57;
-    overflow-x: hidden;
-    background-color: #6617cb;
-    background-image: linear-gradient(315deg, #6617cb 0%, #cb218e 74%);
-  }
-
-
-
-.text-yellow {
-  color: #000000 !important;
-  font-weight: bold;
-  font-size: 20px;
-}
-
-.mytextresponsive {
-  font-weight: 900;
-  font-size: 30px;
-}
-
-@media only screen and (min-width: 576px) {
-  .mytextresponsive {
-    font-weight: 600;
-    font-size: 20px;
-  }
-}
-
-@media only screen and (min-width: 1000px) {
-  .mytextresponsive {
-    font-weight: 900;
-    font-size: 30px;
-  }
-}
-
-.imgresponsive {
-  max-height: 150px !important;
-}
-
-/*Our Partners end*/
-
-  /*CUSTOMER REVIEW*/
-
-  .heading {
-    text-align: center;
-    color: #454343;
-    font-size: 30px;
-    font-weight: 700;
-    position: relative;
-    margin-bottom: 14px;
-    text-transform: uppercase;
-    z-index: 999;
-}
-
-@media only screen and (max-width: 320px) {
-  .heading {
-    text-align: center;
-    color: #454343;
-    font-size: 25px;
-    font-weight: 700;
-    position: relative;
-    margin-bottom: 14px;
-    text-transform: uppercase;
-    z-index: 999;
-
-}
-}
-
-.white-heading{
-    color: #FFC827; ;
-}
-.heading:after {
-    content: ' ';
-    position: absolute;
-    top: 100%;
-    left: 50%;
-    height: 40px;
-    width: 180px;
-    border-radius: 4px;
-    transform: translateX(-50%);
-    background: url(img/heading-line.png);
-    background-repeat: no-repeat;
-    background-position: center;
-}
-.white-heading:after {
-    background: url(https://i.ibb.co/d7tSD1R/heading-line-white.png);
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.heading span {
-    font-size: 18px;
-    display: block;
-    font-weight: 500;
-}
-.white-heading span {
-    color:#FFC827;
-}
-
-/*CUSTOMER REVIEW end*/
-
-/*-----Testimonial-------*/
-
-.testimonial:after {
-    position: absolute;
-    top: -0 !important;
-    left: 0;
-    content: " ";
-    background: url(img/testimonial.bg-top.png);
-    background-size: 100% 100px;
-    width: 100%;
-    height: 100px;
-    float: left;
-    z-index: 99;
-}
-
-.testimonial {
-    min-height: 375px;
-    position: relative;
-    /* padding-top: 50px;
-    padding-bottom: 50px; */
-    background-color: #969696;
-    background-position: center;
-        background-size: cover;
-}
-#testimonial4 .carousel-inner:hover{
-  cursor: -moz-grab;
-  cursor: -webkit-grab;
-}
-#testimonial4 .carousel-inner:active{
-  cursor: -moz-grabbing;
-  cursor: -webkit-grabbing;
-}
-#testimonial4 .carousel-inner .item{
-  overflow: hidden;
-}
-
-.testimonial4_indicators .carousel-indicators{
-  left: 0;
-  margin: 0;
-  width: 100%;
-  font-size: 0;
-  height: 20px;
-  /* bottom: 15px; */
-  padding: 0 5px;
-  cursor: e-resize;
-  overflow-x: auto;
-  overflow-y: hidden;
-  position: absolute;
-  text-align: center;
-  white-space: nowrap;
-}
-.testimonial4_indicators .carousel-indicators li{
-  padding: 0;
-  width: 14px;
-  height: 14px;
-  border: none;
-  text-indent: 0;
-  margin: 2px 3px;
-  cursor: pointer;
-  display: inline-block;
-  background: #ffffff;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-}
-.testimonial4_indicators .carousel-indicators .active{
-  padding: 0;
-  width: 14px;
-  height: 14px;
-  border: none;
-  margin: 2px 3px;
-  background-color: #9dd3af;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-}
-.testimonial4_indicators .carousel-indicators::-webkit-scrollbar{
-  height: 3px;
-}
-.testimonial4_indicators .carousel-indicators::-webkit-scrollbar-thumb{
-  background: #eeeeee;
-  -webkit-border-radius: 0;
-  border-radius: 0;
-}
-
-.testimonial4_control_button .carousel-control{
-  top: 175px;
-  opacity: 1;
-  width: 40px;
-  bottom: auto;
-  height: 40px;
-  font-size: 10px;
-  cursor: pointer;
-  font-weight: 700;
-  overflow: hidden;
-  line-height: 38px;
-  text-shadow: none;
-  text-align: center;
-  position: absolute;
-  background: transparent;
-  border: 2px solid #ffffff;
-  text-transform: uppercase;
-  -webkit-border-radius: 100%;
-  border-radius: 100%;
-  -webkit-box-shadow: none;
-  box-shadow: none;
-  -webkit-transition: all 0.6s cubic-bezier(0.3,1,0,1);
-  transition: all 0.6s cubic-bezier(0.3,1,0,1);
-}
-.testimonial4_control_button .carousel-control.left{
-  left: 7%;
-  top: 50%;
-  right: auto;
-}
-.testimonial4_control_button .carousel-control.right{
-  right: 7%;
-  top: 50%;
-  left: auto;
-}
-.testimonial4_control_button .carousel-control.left:hover,
-.testimonial4_control_button .carousel-control.right:hover{
-  color: #000;
-  background: #fff;
-  border: 2px solid #fff;
-}
-
-.testimonial4_header{
-  top: 0;
-  left: 0;
-  bottom: 0;
-  width: 550px;
-  display: block;
-  margin: 30px auto;
-  text-align: center;
-  position: relative;
-}
-.testimonial4_header h4{
-  color: #ffffff;
-  font-size: 30px;
-  font-weight: 600;
-  position: relative;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-}
-
-.testimonial4_slide{
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 70%;
-  margin: auto;
-  padding: 20px;
-  position: relative;
-  text-align: center;
-}
-.testimonial4_slide img {
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 136px;
-    height: 136px;
-    margin: auto;
-    display: block;
-    color: #f2f2f2;
-    font-size: 18px;
-    line-height: 46px;
-    text-align: center;
-    position: relative;
-    border-radius: 50%;
-    box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.23);
-    -moz-box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.23);
-    -o-box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.23);
-    -webkit-box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.23);
-}
-
-@media only screen and (max-width: 420px) {
-  .testimonial4_slide img {
-    top: 0;
-    left: 0;
-    right: 0;
-    width: 69px;
-    height: 69px;
-    margin: auto;
-    display: block;
-    color: #f2f2f2;
-    font-size: 18px;
-    line-height: 46px;
-    text-align: center;
-    position: relative;
-    border-radius: 50%;
-    box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.23);
-    -moz-box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.23);
-    -o-box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.23);
-    -webkit-box-shadow: -6px 6px 6px rgba(0, 0, 0, 0.23);
-}
-}
-
-.testimonial4_slide p {
-    color: #ffffff;
-    font-size: 20px;
-   
-}
-
-@media only screen and (max-width: 420px) {
-  .testimonial4_slide p {
-    color: #ffffff;
-    font-size: 12px;
-    
-}
-}
-.testimonial4_slide h4 {
-  color: #ffffff;
-  font-size: 22px;
-}
-
-/* .testimonial .carousel {
-  padding-bottom:50px;
-} */
-.testimonial .carousel-control-next-icon, .testimonial .carousel-control-prev-icon {
-    width: 35px;
-    height: 35px;
-}
-/* ------testimonial  close-------*/
-
-
-  /* instagram css  */
-
-  .img-back {
-    background-size: cover;
-  }
-  
-  .container4 {
-    position: relative;
-    width: 100%;
-    max-width: 400px;
-  }
-  
-  .containe4 .img1 {
-    width: 100%;
-    height: auto;
-  }
-  
-  .container4 .btt {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    color: rgb(255, 255, 255);
-    font-size: 19px;
-    border: none;
-    cursor: pointer;
-    border-color: 5px solid white;
-    border-radius: 50%;
-    text-align: center;
-  }
-  
-  .container4 .btt:hover {
-    background-color: rgba(0, 0, 0, 0.342);
-    height: 50px;
-    width: 50px;
-  }
-  
-  .img1 {
-    border-radius: 10px;
-    padding: 0px;
-  }
-  
   /* instagram css end */
 
    /*footer*/
@@ -1090,15 +707,15 @@ h1, h3  {
   text-align: center;
 }
 
-ul {
+/* ul {
   display: block;
   list-style-type: disc;
-  /* margin-block-start: 1em; */
+  margin-block-start: 1em;
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
   padding-inline-start: 40px;
-}
+} */
 
 
 @media (min-width: 1280px){
@@ -1468,98 +1085,3 @@ ul {
 
 
 
-
-/* mobile & desktop crousle css start */
-
-.mobile-crousle2
-{
-  display: none ;
-}
-
-.mypromotioncrousle
-{
-  display: block;
-}
-
-@media screen and (min-width: 319px) and (max-width: 768px){
-
-  .mobile-crousle2
-  {
-    display: block;
-  }
-  
-  .mypromotioncrousle
-  {
-    display: none;
-  }
-
-}
-
-@media screen and (min-width: 769px) and (max-width: 2560px){
-
-  .mobile-crousle2
-  {
-    display: none;
-  }
-  
-  .mypromotioncrousle
-  {
-    display: block;
-  }
-
-}
-
-/* mobile & desktop crousle end */
-
-
-
-.spacetop{
-  padding-top: 80px;
-}
-
-
-@media only screen and (max-width: 420px) {
-  .spacetop{
-    padding-top: 10px;
-    text-align: center;
-  }
-}
-
-.mysocialdiv{
-  padding-bottom: 100px;
-}
-
-.nowplay{
-  font-size: 15px;
- font-weight: 600;
-}
-
-@media only screen and (max-width: 420px) {
-  .nowplay{
-    font-size: 15px;
-   font-weight: 600;
-   text-align: center;
-  }
-  
-}
-
-.Playstore{
-  color: white;
-  font-size: 15px;
-  font-weight: 600;
-}
-
-@media only screen and (max-width: 420px) {
-  .Playstore{
-    color: white;
-    font-size: 15px;
-    font-weight: 600;
-    text-align: center;
-  }
-  
-}
-
-.top{
-
-  z-index: 999;
-}
