--- a/css/responsive.css
+++ b/css/responsive.css
@@ -82,7 +82,7 @@ transform: translate(0px,-5px);
 }
 }
 
-@media screen and (max-width:1279px) {
+@media screen and (max-width:1779px) {
 	.md_header_inn .md_hdr_ctr img {
 	max-height: 200px; display: inline-block;
 }
@@ -108,6 +108,7 @@ transform: translate(0px,-5px);
 .md_banner_inn .md_banner_con h1 {
 	font-size: 64px;
 	line-height: 64px;
+	margin: 50px 0px 0px 10px;
 }
 .md_banner_inn .md_banner_con .md_banner_wa .a_wa {
 	font-size: 28px;
@@ -147,6 +148,8 @@ transform: translate(0px,-5px);
 .md_wheels .md_wheels_inn .md_wheels_con h2 {
 	font-size: 55px;
 	line-height: 55px;
+	text-align: left;
+	padding: 0;
 }
 .md_wheels .md_wheels_inn .md_wheels_con p {
 	margin: 0 0 32px;
@@ -162,7 +165,7 @@ transform: translate(0px,-5px);
 	line-height: 30px;
 }
 .md_wheels .md_wheels_inn .md_wheels_con .md_cmn_wa .a_wa {
-	margin: 0 20px 0 0;
+	margin: 10px 20px 10px 0px;
 	font-size: 23px;
 }
 .md_sites .md_sites_logo a img {
@@ -184,6 +187,8 @@ transform: translate(0px,-5px);
 .md_cs .md_cs_inn .md_cs_lft h2 {
 	font-size: 55px;
 	line-height: 55px;
+	padding:0;
+	text-align: left;
 }
 .md_cs .md_cs_inn .md_cs_lft p {
 	margin: 0 0 32px;
@@ -225,6 +230,8 @@ transform: translate(0px,-5px);
 .md_htp .md_htp_inn .md_htp_rgt h2 {
 	font-size: 55px;
 	line-height: 55px;
+	text-align: start;
+	padding-left: 0;
 }
 .md_htp .md_htp_inn .md_htp_rgt p {
 	margin: 0 0 32px;
@@ -394,6 +401,7 @@ transform: translate(0px,-5px);
 }
 .md_header {
 	padding: 15px 0;
+	margin-top:0%;
 }
 .md_header_inn .md_hdr_lft .a_cfw {
 	font-size: 15px;
@@ -484,7 +492,7 @@ transform: translate(0px,-5px);
 }
 .md_wheels .md_wheels_inn .md_wheels_img {
 	max-width: 350px;
-	left: calc(50% - 13px);
+	left: calc(50% - 39px);
 	transform: translate(-50%,0);
 	position: relative;
 	order: 1;
